--- a/src/view/QuestionUI.fxml
+++ b/src/view/QuestionUI.fxml
@@ -37,9 +37,9 @@
                   <Font size="16.0" />
                </font></Label>
             <Label graphicTextGap="0.0" prefHeight="31.0" prefWidth="259.0" text="  Question" />
-            <TextField fx:id="searched_questions" prefHeight="121.0" prefWidth="335.0" />
+            <ListView fx:id="searchResultsListView" prefHeight="140.0" prefWidth="335.0" />
             <Label prefHeight="48.0" prefWidth="717.0" text="Answer" />
-            <ListView fx:id="searchResultsListView" prefHeight="418.0" prefWidth="335.0" />
+            <ListView fx:id="searchResultsAnswerListView" prefHeight="418.0" prefWidth="335.0" />
          </children>
       </VBox>
       <VBox layoutX="431.0" layoutY="184.0" prefHeight="633.0" prefWidth="466.0" spacing="10.0">
