--- a/src/view/OverviewUI.fxml
+++ b/src/view/OverviewUI.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -215,11 +218,55 @@
                         </Pane>
                      </children>
                   </GridPane>
-                  <ImageView fitHeight="245.0" fitWidth="265.0" layoutX="23.0" layoutY="533.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/Calendar.png" />
-                     </image>
-                  </ImageView>
+                  <Pane layoutX="19.0" layoutY="520.0" prefHeight="260.0" prefWidth="265.0">
+                     <children>
+                        <FlowPane fx:id="calendar" hgap="10.0" layoutX="2.0" layoutY="80.0" prefHeight="177.0" prefWidth="262.0" vgap="5.0" />
+                        <HBox alignment="CENTER" layoutX="15.0" layoutY="4.0" prefHeight="33.0" prefWidth="238.0" spacing="5.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#backOneMonth" styleClass="btn_search" stylesheets="@style.css">
+                                 <graphic>
+                                    <ImageView fitHeight="19.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../images/fi_chevron-left.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
+                              <Text fx:id="year" strokeType="OUTSIDE" strokeWidth="0.0" text="####">
+                                 <font>
+                                    <Font size="12.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="month" strokeType="OUTSIDE" strokeWidth="0.0" text="####">
+                                 <font>
+                                    <Font size="12.0" />
+                                 </font>
+                              </Text>
+                              <Button mnemonicParsing="false" onAction="#forwardOneMonth" styleClass="btn_search" stylesheets="@style.css">
+                                 <graphic>
+                                    <ImageView fitHeight="18.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../images/fi_chevron-right.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" layoutX="4.0" layoutY="40.0" prefHeight="44.0" prefWidth="259.0" spacing="15.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Su" textAlignment="CENTER" />
+                              <Text layoutX="213.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mo" textAlignment="CENTER" />
+                              <Text layoutX="222.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tu" textAlignment="CENTER" />
+                              <Text layoutX="232.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="We" textAlignment="CENTER" />
+                              <Text layoutX="241.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Th" textAlignment="CENTER" />
+                              <Text layoutX="251.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fr" textAlignment="CENTER" />
+                              <Text layoutX="266.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sa" textAlignment="CENTER" />
+                           </children>
+                           <padding>
+                              <Insets right="9.0" />
+                           </padding>
+                        </HBox>
+                     </children>
+                  </Pane>
                </children>
             </Pane>
          </children>
